--- a/kmplots_tbxt.Rmd
+++ b/kmplots_tbxt.Rmd
@@ -9,14 +9,14 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Before starting the analysis
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+Load the data and store it in an object 'samples'. The data I am using was downloaded from the UCSC Xena project. It combines RNASeq data from TCGA (cancer tissues) and GTex (normal tissues) via a common bioinformatics pipeline - so you can directly compare values from both studies.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+samples <- 
+  read.delim("~/Desktop/crc_prognosis/tcga_target_gtex_colorectal.tsv", 
+             header=TRUE)
 ```
 
 ## Including Plots
