--- a/kmplots_tbxt.Rmd
+++ b/kmplots_tbxt.Rmd
@@ -19,12 +19,39 @@ samples <-
              header=TRUE)
 ```
 
-## Including Plots
+Load required packages
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r, message=FALSE}
+library(survival)
+library(survminer)
+library(dplyr)
+library(forcats)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+## Do some preliminery analyses
+
+Summarise numbers of samples of each type in your dataset. We are only interested in 'Primary tumor'(which comes from the TCGA dataset) and 'Normal Tissue' (GTex) for the following analyses. 
+
+(I have decided not to include the 'Solid Tissue Normal' samples in the following analyses. These are from the TCGA and are normal samples adjacent to some of the tumor samples as opposed to from non-cancer patients and therefore not independent data points. I should do a boxplot of these vs their primary tumor counterparts though.)
+
+```{r}
+count(samples, X_sample_type)
+```
+
+This is a boxplot summarising TBXT mRNA levels in normal colon tissue (GTex) vs primary colorectal adenoma.
+
+```{r}
+normal <- filter(samples, X_sample_type == "Normal Tissue")
+cancer <- filter(samples, X_sample_type == "Primary Tumor")
+boxplot(normal$T, cancer$T,
+        at = c(1,2),
+        names = c("Normal", "Cancer"),
+        xlab = "Tissue type",
+        ylab = "T expression (log2(norm_count+1))")
+```
+
+Calculate percentage of Brachyury positive samples in the normal tissue and cancer tissue
+
+```{r}
+(count(normal, T >0))/(count(normal))*100
+```
